--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>家庭劳动审计系统 3.6</title>
+    <title>Housepartner</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
@@ -199,7 +199,7 @@
                         <div className="flex items-center gap-3">
                             <div>
                                 <h1 className="text-lg font-bold text-slate-900 tracking-tight flex items-center gap-2">
-                                    家庭劳动审计
+                                    Housepartner
                                 </h1>
                             </div>
                         </div>
